fix bleeding

--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ section{
 
   
 .parallax-window {
-    min-height: 400px;
+    min-height: 500px;
     background: transparent;
     overflow: hidden;
 }
